--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CHECKER (Update: 01 June, Revision 1)</title>
+    <title>CHECKER (Update: 06 June, Revision 1)</title>
     <style>
       body {
         background-color: #e0e0e0;
@@ -74,13 +74,28 @@
       ></iframe>
       <h3 style="text-align: center">
         <a
-          href="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
+          href="https://nanomachin-free-palestine.hf.space/?__theme=light"
           target="_blank"
-          >4. Oai Proxyy - a Hugging Face Space by testingcodehere
+          >4. Free Palestine - a Hugging Face Space by nanomachin
         </a>
       </h3>
       <iframe
         id="iframe4"
+        src="https://nanomachin-free-palestine.hf.space/?__theme=light"
+        width="100%"
+        height="500"
+        allow="encrypted-media"
+        sandbox
+      ></iframe>
+      <h3 style="text-align: center">
+        <a
+          href="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
+          target="_blank"
+          >5. Oai Proxyy - a Hugging Face Space by testingcodehere
+        </a>
+      </h3>
+      <iframe
+        id="iframe5"
         src="https://testingcodehere-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -91,11 +106,11 @@
         <a
           href="https://bogguiri-waifuplss.hf.space/?__theme=light"
           target="_blank"
-          >5. Waifuplss - a Hugging Face Space by Bogguiri
+          >6. Waifuplss - a Hugging Face Space by Bogguiri
         </a>
       </h3>
       <iframe
-        id="iframe5"
+        id="iframe6"
         src="https://bogguiri-waifuplss.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -106,11 +121,11 @@
         <a
           href="https://xavitaws-whatever.hf.space/?__theme=light"
           target="_blank"
-          >6. Whatever - a Hugging Face Space by xavitaws
+          >7. Whatever - a Hugging Face Space by xavitaws
         </a>
       </h3>
       <iframe
-        id="iframe6"
+        id="iframe7"
         src="https://xavitaws-whatever.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -121,11 +136,11 @@
         <a
           href="https://nocars123-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >7. Nocars - a Hugging Face Space by Nocars123
+          >8. Nocars - a Hugging Face Space by Nocars123
         </a>
       </h3>
       <iframe
-        id="iframe7"
+        id="iframe8"
         src="https://nocars123-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -136,11 +151,11 @@
         <a
           href="https://bogguiri-waifuplss4.hf.space/?__theme=light"
           target="_blank"
-          >8. Waifuplss - a Hugging Face Space by Bogguiri
+          >9. Waifuplss - a Hugging Face Space by Bogguiri
         </a>
       </h3>
       <iframe
-        id="iframe8"
+        id="iframe9"
         src="https://bogguiri-waifuplss4.hf.space"
         width="100%"
         height="500"
@@ -151,11 +166,11 @@
         <a
           href="https://maribabababa-3-5ai.hf.space/?__theme=light"
           target="_blank"
-          >9. 3.5ai - a Hugging Face Space by maribabababa
+          >10. 3.5ai - a Hugging Face Space by maribabababa
         </a>
       </h3>
       <iframe
-        id="iframe9"
+        id="iframe10"
         src="https://maribabababa-3-5ai.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -164,11 +179,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://orangezulu-rp.hf.space/?__theme=light" target="_blank"
-          >10. rp - a Hugging Face Space by orangezulu
+          >11. rp - a Hugging Face Space by orangezulu
         </a>
       </h3>
       <iframe
-        id="iframe10"
+        id="iframe11"
         src="https://orangezulu-rp.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -177,11 +192,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://yukianon-turbo.hf.space/?__theme=light" target="_blank"
-          >11. Alien Research - a Hugging Face Space by yukianon
+          >12. Alien Research - a Hugging Face Space by yukianon
         </a>
       </h3>
       <iframe
-        id="iframe11"
+        id="iframe12"
         src="https://yukianon-turbo.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -192,11 +207,11 @@
         <a
           href="https://bogguiri-waifuplsstest.hf.space/?__theme=light"
           target="_blank"
-          >12. Waifuplss - a Hugging Face Space by Bogguiri
+          >13. Waifuplss - a Hugging Face Space by Bogguiri
         </a>
       </h3>
       <iframe
-        id="iframe12"
+        id="iframe13"
         src="https://bogguiri-waifuplsstest.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -205,11 +220,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://ikenga-proxy1.hf.space/?__theme=light" target="_blank"
-          >13. Proxy - a Hugging Face Space by ikenga
+          >14. Proxy - a Hugging Face Space by ikenga
         </a>
       </h3>
       <iframe
-        id="iframe13"
+        id="iframe14"
         src="https://ikenga-proxy1.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -220,11 +235,11 @@
         <a
           href="https://yukianon-alien-research.hf.space/?__theme=light"
           target="_blank"
-          >14. Alien Research - a Hugging Face Space by yukianon
+          >15. Alien Research - a Hugging Face Space by yukianon
         </a>
       </h3>
       <iframe
-        id="iframe14"
+        id="iframe15"
         src="https://yukianon-alien-research.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -235,11 +250,11 @@
         <a
           href="https://undyingrageblade-closedainasdwfdsag.hf.space/?__theme=light"
           target="_blank"
-          >15. ClosedAinasdwfdsag - a Hugging Face Space by UndyingRageblade
+          >16. ClosedAinasdwfdsag - a Hugging Face Space by UndyingRageblade
         </a>
       </h3>
       <iframe
-        id="iframe15"
+        id="iframe16"
         src="https://undyingrageblade-closedainasdwfdsag.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -250,11 +265,11 @@
         <a
           href="https://mmoose-gptmoose.hf.space/?__theme=light"
           target="_blank"
-          >16. GPTMoose - a Hugging Face Space by MMoose
+          >17. GPTMoose - a Hugging Face Space by MMoose
         </a>
       </h3>
       <iframe
-        id="iframe16"
+        id="iframe17"
         src="https://mmoose-gptmoose.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -265,11 +280,11 @@
         <a
           href="https://kftrasher-walter.hf.space/?__theme=light"
           target="_blank"
-          >17. FreedomUnit - a Hugging Face Space by KFTrasher
+          >18. FreedomUnit - a Hugging Face Space by KFTrasher
         </a>
       </h3>
       <iframe
-        id="iframe17"
+        id="iframe18"
         src="https://kftrasher-walter.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -280,11 +295,11 @@
         <a
           href="https://bloodstain-broken-image.hf.space/?__theme=light"
           target="_blank"
-          >18. Broken Image - a Hugging Face Space by bloodstain
+          >19. Broken Image - a Hugging Face Space by bloodstain
         </a>
       </h3>
       <iframe
-        id="iframe18"
+        id="iframe19"
         src="https://bloodstain-broken-image.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -295,11 +310,11 @@
         <a
           href="https://krazyxki-v-1488abed.hf.space/?__theme=light"
           target="_blank"
-          >19. 2ch-reverse-proxy - a Hugging Face Space by krazyxki
+          >20. 2ch-reverse-proxy - a Hugging Face Space by krazyxki
         </a>
       </h3>
       <iframe
-        id="iframe19"
+        id="iframe20"
         src="https://krazyxki-v-1488abed.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -310,11 +325,11 @@
         <a
           href="https://ahhh082222222-23wefs.hf.space/?__theme=light"
           target="_blank"
-          >20. 23wefs - a Hugging Face Space by ahhh082222222
+          >21. 23wefs - a Hugging Face Space by ahhh082222222
         </a>
       </h3>
       <iframe
-        id="iframe20"
+        id="iframe21"
         src="https://ahhh082222222-23wefs.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -325,11 +340,11 @@
         <a
           href="https://raelfromgenesis-calmreasonablegarden.hf.space/?__theme=light"
           target="_blank"
-          >21. Calmreasonablegarden - a Hugging Face Space by raelfromgenesis
+          >22. Calmreasonablegarden - a Hugging Face Space by raelfromgenesis
         </a>
       </h3>
       <iframe
-        id="iframe21"
+        id="iframe22"
         src="https://raelfromgenesis-calmreasonablegarden.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -340,11 +355,11 @@
         <a
           href="https://yukianon-literary-club.hf.space/?__theme=light"
           target="_blank"
-          >22. Alien Research - a Hugging Face Space by yukianon
+          >23. Alien Research - a Hugging Face Space by yukianon
         </a>
       </h3>
       <iframe
-        id="iframe22"
+        id="iframe23"
         src="https://yukianon-literary-club.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -355,11 +370,11 @@
         <a
           href="https://lee-myo-biyanna.hf.space/?__theme=light"
           target="_blank"
-          >23. Biyanna - a Hugging Face Space by LEE-MYO
+          >24. Biyanna - a Hugging Face Space by LEE-MYO
         </a>
       </h3>
       <iframe
-        id="iframe23"
+        id="iframe24"
         src="https://lee-myo-biyanna.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -370,11 +385,11 @@
         <a
           href="https://idosal-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >24. oai-reverse-proxy - a Hugging Face Space by idosal
+          >25. oai-reverse-proxy - a Hugging Face Space by idosal
         </a>
       </h3>
       <iframe
-        id="iframe24"
+        id="iframe25"
         src="https://idosal-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -385,11 +400,11 @@
         <a
           href="https://nocars-oai-proxy.hf.space/?__theme=light"
           target="_blank"
-          >25. Oai Proxy - a Hugging Face Space by nocars
+          >26. Oai Proxy - a Hugging Face Space by nocars
         </a>
       </h3>
       <iframe
-        id="iframe25"
+        id="iframe26"
         src="https://nocars-oai-proxy.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -398,11 +413,11 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://gkswk-gwon.hf.space/?__theme=light" target="_blank"
-          >26. Gwon - a Hugging Face Space by gkswk
+          >27. Gwon - a Hugging Face Space by gkswk
         </a>
       </h3>
       <iframe
-        id="iframe26"
+        id="iframe27"
         src="https://gkswk-gwon.hf.space/?__theme=light"
         width="100%"
         height="500"
@@ -411,7 +426,7 @@
       ></iframe>
       <h3 style="text-align: center">
         <a href="https://qsiq-archlive.hf.space/?__theme=light" target="_blank"
-          >27. Archlive - a Hugging Face Space by QsIQ
+          >28. Archlive - a Hugging Face Space by QsIQ
         </a>
       </h3>
       <iframe
@@ -539,6 +554,10 @@
       };
       var iframe27 = document.getElementById("iframe27");
       iframe27.contentWindow.document.open = function () {
+        return null;
+      };
+      var iframe27 = document.getElementById("iframe28");
+      iframe28.contentWindow.document.open = function () {
         return null;
       };
     </script>
